Add header to summary reports for PT, Groups

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -177,7 +177,8 @@
 
 
 .model-summary-report {
-    padding: 20px 30px 30px 30px;
+    background: #fff;
+    padding: 55px 30px 30px 30px;
     cursor: pointer;
 }
 
