--- a/afs/media/css/report_templates.css
+++ b/afs/media/css/report_templates.css
@@ -38,6 +38,14 @@
     padding-top: 5px;
 }
 
+.pad-lft-sm {
+    padding-left: 5px;
+}
+
+.margin-top-summary {
+    margin-top: 0px;
+}
+
 .afs-report-toolbar {
     width: 100%;
     height: 50px;
@@ -791,4 +799,23 @@ a.afs-block-value-url {
     width: calc(100% - 10px);
     border: 1px solid #ddd;
     background: #f6f6f6;
+}
+
+.afs-summary-report-header {
+    height: 50px;
+    background: #fff;
+    position: fixed;
+    top: 101px;
+    width: 100%;
+    margin-bottom: 60px;
+    z-index: 10;
+}
+
+.afs-summary-report-title {
+    font-size: 19px;
+    font-weight: 400;
+    margin-left: 30px;
+    margin-top: 20px;
+    border-bottom: 1px solid #ddd;
+    display: inline-block;
 }
