Add loading progress message, #757

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -837,3 +837,18 @@
     background-color: #eff7f9;
     border-bottom: 1px solid #ddd !important;
 }
+
+.afs-saving-message {
+    font-size: 20px;
+    color: #eee;
+    text-shadow: 2px 2px 4px #000;
+    font-weight: 600;
+    top: 25%;
+    left: 25%;
+    padding-top: 5%;
+    width: 50%;
+    height: 50%;
+    text-align: center;
+    position: absolute;
+    z-index: 100000001;
+}
