Add remaining titles for summary reports

--- a/afs/templates/views/components/reports/place.htm
+++ b/afs/templates/views/components/reports/place.htm
@@ -94,7 +94,9 @@
 {% endblock report %}
 
 {% block summary %}
-
+<div class="afs-summary-report-header">
+    <h1 class="afs-summary-report-title"><span data-bind="text: displayname" class="afs-report-instance-name"></span><span class="afs-report-name pad-lft-sm">{% trans "(Place)" %}</span></h1>
+</div>
 <div class="model-summary-report">
     <div class="afs-report-page">
         <!-- Names -->
