Make language column in names and descriptions tables hidden by default

--- a/afs/media/css/report_templates.css
+++ b/afs/media/css/report_templates.css
@@ -539,7 +539,7 @@ i.toggle:hover {
 }
 
 .firstchild-container {
-    border-top: 1px solid #ddd;
+    /* border-top: 1px solid #ddd; */
 }
 
 .afs-summary-value {
