--- a/afs/templates/views/components/reports/scenes/name.htm
+++ b/afs/templates/views/components/reports/scenes/name.htm
@@ -25,7 +25,7 @@
                             <tr class="afs-table-header">
                                 <th>{% trans "Name" %}</th>
                                 <th class="min-tabletl">{% trans "Type" %}</th>
-                                <th class="min-medium">{% trans "Language" %}</th>
+                                <th class="none">{% trans "Language" %}</th>
                                 <th class="afs-table-control all"></th>
                             </tr>
                         </thead>
