--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -515,6 +515,10 @@
     width: 100%;
 }
 
+.analysis-areas-workflow-regions-step .iiif-gallery-sequence-label {
+    display: none;
+}
+
 .analysis-areas-workflow-regions-step .style-tools-wrapper {
     padding: inherit;
 }
