Adjust css for the 2nd component, #758

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -763,6 +763,14 @@
     padding-left: 0px;
 }
 
+.workflow-component-element .afs-workflow-second-component {
+    margin-top: -60px;
+}
+
+.workflow-component-element .afs-workflow-second-component .widget-input-label{
+    padding-left: 0px;
+}
+
 .workflow-component-based-step-wrapper .afs-project-workflow .control-label {
     padding-left: 0px;
 }
