--- a/afs/templates/views/components/reports/scenes/existence.htm
+++ b/afs/templates/views/components/reports/scenes/existence.htm
@@ -30,9 +30,9 @@
             <!-- ko foreach: { data: eventDataArray[eventName], as: "eventData", noChildContext: true} -->
             <!-- ko if: !!eventData && eventData.tileid -->
             <div class="afs-report-subsection">
-                <h2 class="afs-report-section-subtitle">{% trans "Event Summary" %}</h2>
+                <h2 class="afs-report-section-subtitle" style="display: block; margin-bottom: 5px;"><i data-bind="click: function() {toggleVisibility(eventData.visible)}, css: {'fa-angle-double-right': eventData.visible(), 'fa-angle-double-up': !eventData.visible()}" class="fa toggle"></i> {% trans "Event Summary " %} <span></span></h2>
                 <!-- <a class="afs-report-a"><i class="fa fa-mail-reply"></i> {% trans "Edit this Event" %}</a>-->
-                <h3 style="display: block ;"><i data-bind="click: function() {toggleVisibility(eventData.visible)}, css: {'fa-angle-double-right': eventData.visible(), 'fa-angle-double-up': !eventData.visible()}" class="fa toggle"></i> {% trans "Event: " %} <span></span></h3>
+ 
                 <div class="afs-nodata-note afs-top-card" style="display: none;">No information for this event</div>
 
                 <div data-bind="visible: eventData.visible" class="afs-report-collapsible-container">
@@ -73,7 +73,7 @@
                                         <tr class="afs-table-header">
                                             <th>{% trans "Name" %}</th>
                                             <th class="min-tabletl">{% trans "Type" %}</th>
-                                            <th class="min-medium">{% trans "Language" %}</th>
+                                            <th class="none">{% trans "Language" %}</th>
                                             <th class="afs-table-control all"></th>
                                         </tr>
                                     </thead>
@@ -117,8 +117,8 @@
                                 <table class="table table-striped" cellspacing="0" width="100%">
                                     <thead>
                                         <tr class="afs-table-header">
-                                            <th>{% trans "Type" %}</th>
                                             <th>{% trans "Statement" %}</th>
+                                            <th>{% trans "Type" %}</th>
                                             <th class="none">{% trans "Language" %}</th>
                                             <th class="none">{% trans "Name of Statement" %}</th>
                                             <th class="afs-table-control all"></th>
@@ -126,8 +126,8 @@
                                     </thead>
                                     <tbody  data-bind="dataTablesForEach: { data: eventData.statements, dataTableOptions: statementsTableConfig}">
                                         <tr>
-                                            <td data-bind="text: type"></td>
                                             <td data-bind="text: content" class="line-clamp-1" style="vertical-align: unset; padding-top: 7px;"></td>
+                                            <td data-bind="text: type"></td>
                                             <td data-bind="text: language"></td>
                                             <td data-bind="text: name"></td>
                                             <td class="afs-table-control">
@@ -243,9 +243,9 @@
                 <a data-bind="if: cards[eventName].parts, click: function(){addNewTile(cards[eventName].parts)}" class="afs-report-a"><i class="fa fa-mail-reply"></i> {% trans "Add Part" %}</a>
             
                 <!-- Event Part -->
-                <div class="afs-report-event-section" data-bind="foreach:{ data: eventData.parts }" class="part">
+                <div data-bind="foreach:{ data: eventData.parts }" class="part">
                     <div>
-                        <h3><i data-bind="click: function(){$parent.toggleVisibility(visible)}" class="fa fa-angle-double-right"></i> {% trans "Event Part: " %} <span data-bind="text: name"></span></h3>
+                        <h3><i data-bind="click: function(){$parent.toggleVisibility(visible)}" class="fa fa-angle-double-right"></i> {% trans "Event Part " %} <span data-bind="text: name"></span></h3>
                         <div class="afs-part-expanded" data-bind="visible: visible">
                             <a data-bind="click: function(){editTile(tileid, cards.identifier)}" class="afs-report-a"><i class="fa fa-mail-reply"></i> {% trans "Edit this Part" %}</a>
             
@@ -253,7 +253,7 @@
                             <div class="afs-nodata-note afs-top-card" style="display: none;">No information for this event</div>
             
                             <!-- Show this if there is Event data (Top Card) -->
-                            <div class="afs-report-collapsible-container">
+                            <div class="afs-report-event-section afs-report-collapsible-container">
                                 <div class="afs-report-subsection-container">
                                     <div  style="width:75%;" data-bind="foreach: {data: $data.metadata, as: 'item' }" class="afs-report-subsection-two-column">
                                         <div afs-report-subsection-two-column>  
@@ -330,8 +330,8 @@
                                             <table class="table table-striped" cellspacing="0" width="100%">
                                                 <thead>
                                                     <tr class="afs-table-header">
-                                                        <th>{% trans "Type" %}</th>
                                                         <th>{% trans "Statement" %}</th>
+                                                        <th>{% trans "Type" %}</th>
                                                         <th class="none">{% trans "Language" %}</th>
                                                         <th class="none">{% trans "Name of Statement" %}</th>
                                                         <th class="afs-table-control all"></th>
@@ -339,8 +339,8 @@
                                                 </thead>
                                                 <tbody  data-bind="dataTablesForEach: { data: statements, dataTableOptions: $parent.statementsTableConfig}">
                                                     <tr>
-                                                        <td data-bind="text: type"></td>
                                                         <td data-bind="text: content" class="line-clamp-1" style="vertical-align: unset; padding-top: 7px;"></td>
+                                                        <td data-bind="text: type"></td>
                                                         <td data-bind="text: language"></td>
                                                         <td data-bind="text: name"></td>
                                                         <td class="afs-table-control">
