--- a/afs/media/css/report_templates.css
+++ b/afs/media/css/report_templates.css
@@ -443,6 +443,11 @@ i.toggle:hover {
     padding-left: 12px;
     margin-bottom: 15px;
     padding-top: 5px;
+    background: #f6f8fa;
+    padding-bottom: 15px;
+    border: 1px solid #e9e9e9;
+    border-top: none;
+    border-radius: 2px;
 }
 
 .afs-report-subsection-container.no-flex {
@@ -591,6 +596,10 @@ i.toggle:hover {
 
 .afs-table table.dataTable > tbody > tr.child ul.dtr-details li:first-child {
     padding-top: 5px;
+}
+
+.afs-table .table-striped>tbody>tr:nth-of-type(odd) {
+    background-color: #f6f8fa90 !important;
 }
 
 .line-clamp-1 {
