Add upload-data step to hide switch button, #784

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -515,7 +515,8 @@
     width: 100%;
 }
 
-.analysis-areas-workflow-regions-step .iiif-gallery-sequence-label {
+.analysis-areas-workflow-regions-step .iiif-gallery-sequence-label,
+.upload-dataset-step-workflow-component-based-step .iiif-gallery-sequence-label {
     display: none;
 }
 
