makes it a single sample area

--- a/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-annotation-step.htm
+++ b/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-annotation-step.htm
@@ -200,10 +200,15 @@
                                         </div>
                                     </div>
                                     <div class="map-card-feature-list">
+                                        <span data-bind="text: console.log(widget)"></span>
                                         <div 
                                             class="add-new-feature" 
                                             data-bind="{
-                                                visible: !self.disableDrawing(),
+                                                visible: !self.disableDrawing() && 
+                                                    (widget.config.multiFeature() || 
+                                                    (!widget.config.multiFeature() && 
+                                                        (self.selectedAnalysisAreaInstanceFeatures() === undefined || 
+                                                        self.selectedAnalysisAreaInstanceFeatures().length < 1))),
                                                 click: self.clearEditedGeometries,
                                             }"
                                         >
