--- a/afs/templates/views/components/reports/group.htm
+++ b/afs/templates/views/components/reports/group.htm
@@ -143,7 +143,8 @@
             name: 'views/components/reports/scenes/name',
             params: {
                 data: resource,
-                cards: nameCards
+                cards: nameCards,
+                dataConfig: nameDataConfig
             }
         }"></div>
         <!-- Description -->
