Add new splash image

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -1,4 +1,11 @@
 @import url(report_templates.css);
+.v5-splash-caption {
+    background: none;
+}
+
+.down-button {
+    border-width: 2px;
+}
 
 .chart {
     margin-right: 105px;
