Fix style of nav on focus

--- a/afs/templates/index.htm
+++ b/afs/templates/index.htm
@@ -82,7 +82,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         </li>
 
                         <li>
-                            <a href="{% url 'search_home' %}">{% trans "Search Arches" %}</a>
+                            <a href="{% url 'search_home' %}">{% trans "Search" %}</a>
                         </li>
 
                         {% if user|can_create_resource_instance and user.username != 'anonymous' %}
