--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -1,4 +1,9 @@
 @import url(report_templates.css);
+.nav>li>a:focus {
+    text-decoration: none;
+    background-color: #000;
+}
+
 .v5-splash-caption {
     background: none;
 }
