--- a/afs/templates/views/components/reports/scenes/annotation-parts.htm
+++ b/afs/templates/views/components/reports/scenes/annotation-parts.htm
@@ -1,7 +1,7 @@
 {% load i18n %}
 
-<div style="display:flex; flex-wrap: wrap">
-    <div style="border: solid 1px #ddd; flex: 0 0 100%;margin-bottom: 10px">
-        <div class="iiif-leaflet" data-bind="leaflet: leafletConfig" style="height: 500px;"></div>
+<div style="display:flex; flex-wrap: wrap" data-bind="foreach: annotations">
+    <div style="border: solid 1px #ddd; flex-direction: row; flex-wrap: wrap; height: 300px; width: 300px; margin: 10px">
+        <div class="iiif-leaflet" data-bind="leaflet: leafletConfig"></div>
     </div>
 <div>
