--- a/afs/templates/views/components/reports/sampling-activity.htm
+++ b/afs/templates/views/components/reports/sampling-activity.htm
@@ -110,53 +110,14 @@
                         
                         <!-- ko if: Array.isArray(annotation.info) -->
                         <div data-bind="with: annotation, as: 'annotation', noChildContext: true">
-                            <div data-bind="component: { name: 'views/components/reports/scenes/annotation-parts', params: {annotation: annotation, selectedAnnotationTileId: selectedAnnotationTileId}}"></div>
-                        </div>
-                        <div class="afs-table pad-btm">
-                            <table class="table table-striped" cellspacing="0" width="100%">
-                                <thead>
-                                    <tr class="afs-table-header">
-                                        <th>{% trans "Sampling Area" %}</th>
-                                        <th>{% trans "Sample Created" %}</th>
-                                        <th>{% trans "Overall Object" %}</th>
-                                        <th class="afs-table-control all"></th>
-                                    </tr>
-                                </thead>
-                                <tbody data-bind="dataTablesForEach: { data: annotation.info, as: 'part', dataTableOptions: annotationTableConfig }">
-                                    <tr>
-                                        <td>
-                                            <a data-bind="text: $parent.getNodeValue(part.samplingArea), attr: {href: $parent.getResourceLink(part.samplingArea)}"></a>
-                                        </td>
-                                        <td>
-                                            <a data-bind="text: $parent.getNodeValue(part.sampleCreated), attr: {href: $parent.getResourceLink(part.sampleCreated)}"></a>
-                                        </td>
-                                        <td>
-                                            <a data-bind="text: $parent.getNodeValue(part.overallObjectSampled), attr: {href: $parent.getResourceLink(part.overallObjectSampled)}"></a>
-                                        </td>
-                                        <td style="width: 110px;" class="afs-table-control">
-                                            <div">
-                                            <div style="display:inline" data-bind="if: $parent.annotation.card && $parent.annotation.card">
-                                                <a style="display:inline" data-bind="click: function() {$parent.editTile(part.tileId, annotation.card)}">
-                                                    <i style="display:inline" class="fa fa-mail-reply"></i>
-                                                </a>
-                                                <a style="display:inline" data-bind="click: function() {$parent.deleteTile(part.tileId, annotation.card)}">
-                                                    <i style="display:inline" class="fa fa-trash"></i>
-                                                </a>
-                                            </div>
-                                            <a style="display:inline" data-bind="click: function(){$parent.selectedAnnotationTileId(part.tileId)}">
-                                                <i class="fa fa-globe"></i>
-                                            </a>
-                                            <i style="display:inline" data-bind="visible: $parent.selectedAnnotationTileId() === part.tileId" class="fa fa-arrow-left"></i>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                        <div class="final-step-section-block-item">
-                            <div class="block-item files-metadata">
-                                <div class="summary-value" data-bind='text: "{% trans 'Sampling Areas: ' %}" + annotation.info.length'></div>
-                            </div>
+                            <div data-bind="component: {
+                                name: 'views/components/reports/scenes/annotation-parts',
+                                params: {
+                                    annotation: annotation,
+                                    selectedAnnotationTileId: selectedAnnotationTileId,
+                                    annotationTableHeader: annotationTableHeader,
+                                    annotationTableConfig: annotationTableConfig,
+                                }}"></div>
                         </div>
                         <!-- /ko -->
                     </div>
