--- a/afs/templates/views/components/reports/physical-thing.htm
+++ b/afs/templates/views/components/reports/physical-thing.htm
@@ -129,14 +129,14 @@
                         
                         <!-- ko if: Array.isArray(annotation.info) -->
                         <div class="pad-top-sm" data-bind="with: annotation, as: 'annotation', noChildContext: true">
-                            <div data-bind="component: { name: 'views/components/reports/scenes/annotation-parts', 
-                                                        params: {
-                                                            annotation: annotation,
-                                                            selectedAnnotationTileId: selectedAnnotationTileId,
-                                                            annotationTableHeader: annotationTableHeader,
-                                                            annotationTableConfig: annotationTableConfig,
-                                                            includeTable: true
-                                                        }}"></div>
+                            <div data-bind="component: {
+                                name: 'views/components/reports/scenes/annotation-parts',
+                                params: {
+                                    annotation: annotation,
+                                    selectedAnnotationTileId: selectedAnnotationTileId,
+                                    annotationTableHeader: annotationTableHeader,
+                                    annotationTableConfig: annotationTableConfig,
+                                }}"></div>
                         </div>
                         <!-- /ko -->
                     </div>
