Update the leaftlet container width to 100%, #802

--- a/afs/templates/views/components/workflows/upload-dataset/upload-dataset-final-step.htm
+++ b/afs/templates/views/components/workflows/upload-dataset/upload-dataset-final-step.htm
@@ -60,7 +60,7 @@
         <div style="margin-top: -20px">
             <!-- ko if: $parent.hasAnnotatedParts -->
             <div style="border: solid 1px #ddd">
-                <div class="iiif-leaflet" data-bind="leaflet: leafletConfig" style="height: 300px; width: 400px"></div>
+                <div class="iiif-leaflet" data-bind="leaflet: leafletConfig" style="height: 300px; width: 100%"></div>
             </div>
             <!-- /ko -->
             <div style="width: 100%; padding-left: 10px; padding-right: 10px; margin-bottom: 20px;">
