--- a/afs/templates/views/components/workflows/upload-dataset/dataset-step.htm
+++ b/afs/templates/views/components/workflows/upload-dataset/dataset-step.htm
@@ -25,7 +25,7 @@
         <label for="non-destructive" data-bind="cursor: $data.locked() ? 'default' : 'pointer';">
             <h5 class="afs-workflow-option">{% trans "Data from a discrete area/region of interest" %}</h5>
             <p class="afs-workflow-option-instruction">
-                {% trans "Choose this dataset type for any data resulting from a non-invasive technique and/or a minimally-invasive/minimally-destructive technique performed on a larger object but which does not consume the entire object/sample. This includes datasets from non-invasive techniques performed on remote samples." %}
+                {% trans "Choose this dataset type for any data resulting from a non-invasive technique and/or a minimally-invasive/minimally-destructive technique performed on a larger object but which does not consume the entire object/sample. This includes datasets from non-invasive techniques performed on removed samples." %}
             </p>
         </label>
     </div>
