--- a/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-final-step.htm
+++ b/afs/templates/views/components/workflows/analysis-areas-workflow/analysis-areas-final-step.htm
@@ -2,14 +2,25 @@
 <!-- ko if: loading() === false -->
 <div class="final-step">
     <div class="afs-final-step-section">
-        <h5 class="summary-value">{% trans 'Related Object' %}</h5>
+        <h5 class="summary-value">{% trans 'Related Project/Object' %}</h5>
         <div class="afs-final-step-block">
             <div style="display: flex; flex-direction: column;">
-                <a data-bind="attr: { href: urls.resource + '/' + resourceid}" target="_blank">
-                    <div class="summary-value" 
-                        data-bind = "text: displayName">
-                    </div>
-                </a>
+                <div style="display: inline-flex;">
+                    <div class="summary-label" data-bind="text: reportVals.projectName.name + ':'"></div>
+                    <a data-bind="attr: { href: urls.resource + '/' + reportVals.projectName.resourceid}" target="_blank">
+                        <div class="summary-value" 
+                            data-bind = "text: reportVals.projectName.value">
+                        </div>
+                    </a>
+                </div>
+                <div style="display: inline-flex;">
+                    <div class="summary-label" data-bind="text: reportVals.parentObject.name + ':'"></div>
+                    <a data-bind="attr: { href: urls.resource + '/' + resourceid}" target="_blank">
+                        <div class="summary-value" 
+                            data-bind = "text: displayName">
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
