Prevents header from floating in interpretation step, re #817

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -672,6 +672,10 @@
     padding: 3px 8px;
 }
 
+.upload-dataset-step-workflow-component-based-step .workbench-card-sidepanel-header-container {
+    position: absolute;
+}
+
 .afs-sample-name .form-group .widget-input-label {
     display: none;
 }
